--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -11,6 +11,13 @@
     src: url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.woff2) format("woff2"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-Regular.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .home-container {
   max-height: 750px;
   padding: 30px;
@@ -109,22 +116,24 @@
   font-size: 10vw;
 }
 
-#infoBottom p:first-child{
-  margin-top: -0.25%;
+#infoBottom p:nth-child(1){
+  margin-top: -15%;
   font-family: 'ghanachoco';
   font-size: clamp(1.5rem, 3vw, 3rem);
 }
 #infoBottom p:nth-child(2){
+  font-family: 'GmarketSansMedium';
   margin-top: -1.5%;
-  font-size: clamp(1rem, 1.5vw, 2rem);
+  margin-bottom: 7%;
+  font-size: clamp(0.8rem, 1.5vw, 2rem);
 }
 
 #infoBottom p:nth-child(3), p:nth-child(4), p:nth-child(5){
-  font-size: clamp(1rem, 1vw, 2rem);
+  font-family: 'GmarketSansMedium';
+  font-size: clamp(0.6rem, 1vw, 2rem);
   margin-top: 3%;
 }
 
-#portfolio { margin-top: -18%; margin-bottom: -10%;}
 @media (max-width: 400px) {
   .info-line span:first-child {
     display: none;
@@ -140,106 +149,137 @@
     width: 100%;
   }
 }
+#folderFront {margin-top: -20%;}
 @media (max-width: 1800px) {
-  #portfolio { margin-top: -19%; margin-bottom: -9%;}
+  #folderFront {margin-top: -18%;}
+  #portfolio { margin-top: -19%;}
 }
 @media (max-width: 1700px) {
-  #portfolio { margin-top: -21%; margin-bottom: -9%;}
+  #folderFront {margin-top: -17%;}
+  #portfolio { margin-top: -21%;}
 }
 @media (max-width: 1600px) {
-  #portfolio { margin-top: -22%; margin-bottom: -9%;}
+  #folderFront {margin-top: -16%;}
+  #portfolio { margin-top: -22%;}
 }
 @media (max-width: 1500px) {
-  #portfolio { margin-top: -22.5%; margin-bottom: -9%;}
+  #folderFront {margin-top: -15%;}
+  #portfolio { margin-top: -22.5%}
 }
 @media (max-width: 1400px) {
-  #portfolio { margin-top: -23%; margin-bottom: -11%;}
+  #folderFront {margin-top: -14%;}
+  #portfolio { margin-top: -23%;}
 }
 @media (max-width: 1350px) {
-  #portfolio {margin-top: -24.5%; margin-bottom: -11%;}
+  #folderFront {margin-top: -12%;}
+  #portfolio {margin-top: -24.5%;}
 }
 @media (max-width: 1300px) {
-  #portfolio {margin-top: -25%; margin-bottom: -11%;}
+  #folderFront {margin-top: -10%;}
+  #portfolio {margin-top: -25%;}
 }
 @media (max-width: 1200px) {
-  #portfolio {margin-top: -28%; margin-bottom: -14%; font-size: 10vw;}
+  #folderFront {margin-top: -8%;}
+  #portfolio {margin-top: -28%;font-size: 10vw;}
 }
 @media (max-width: 1100px) {
-  #portfolio {margin-top: -29.5%; margin-bottom: -15%;}
+  #folderFront {margin-top: -7%;}
+  #portfolio {margin-top: -29.5%;}
 }
 @media (max-width: 1000px) {
-  #portfolio {margin-top: -31%; margin-bottom: -16%; }
+  #folderFront {margin-top: -6%;}
+  #portfolio {margin-top: -31%;}
 }
 @media (max-width: 970px) {
-  #portfolio {margin-top: -34%; margin-bottom: -17%; font-size: 11vw;}
+  #infoBottom {margin-top: -8%;}
+  #portfolio {margin-top: -34%; font-size: 11vw;}
 }
 @media (max-width: 920px) {
-  #portfolio {margin-top: -35; margin-bottom: -17%;}
+  #folderFront {margin-top: -6%;}
+  #portfolio {margin-top: -35%; }
 }
 @media (max-width: 880px) {
+  #folderFront {margin-top: -8%;}
   #portfolio {font-size: 12.4vw;}
 }
 @media (max-width: 870px) {
-  #portfolio {margin-top: -38.5%; margin-bottom: -19%; font-size: 12.5vw;}
+  #folderFront {margin-top: -10%; margin-bottom: -5%;}
+  #portfolio {margin-top: -38.5%; font-size: 12.5vw;}
 }
 @media (max-width: 850px) {
-  #portfolio {margin-top: -39%; margin-bottom: -19%; font-size: 13.5vw;}
+  #folderFront {margin-top: -10%;}
+  #portfolio {margin-top: -39%; font-size: 13.5vw;}
 }
 @media (max-width: 820px) {
-  #portfolio {margin-top: -41%; margin-bottom: -19%; font-size: 13.5vw;}
+  #folderFront {margin-top: -10%;}
+  #portfolio {margin-top: -41%; font-size: 13.5vw;}
 }
 @media (max-width: 800px) {
-  #portfolio {margin-top: -43%; margin-bottom: -19%;}
+  #portfolio {margin-top: -43%; }
 }
 @media (max-width: 760px) {
   #portfolio {font-size: 14vw;}
 }
 @media (max-width: 740px) {
-  #portfolio {margin-top: -48%; margin-bottom: -21%; font-size: 15vw;}
+  #portfolio {margin-top: -48%;  font-size: 15vw;}
 }
 @media (max-width: 700px) {
-  #portfolio {margin-top: -48%; margin-bottom: -23%; font-size: 16vw;}
+  #portfolio {margin-top: -48%;  font-size: 16vw;}
 }
 @media (max-width: 690px) {
-  #portfolio {margin-top: -43%; margin-bottom: -23%; font-size: 16vw;}
+  #portfolio {margin-top: -43%;  font-size: 16vw;}
   #folderFront {width: 77%;}
   #folderBack {width: 77%;}
 }
 @media (max-width: 690px) {
-  #portfolio {margin-top: -42%; margin-bottom: -23%; font-size: 16vw;}
+  #folderFront {margin-top: -10%;}
+  #portfolio {margin-top: -42%; font-size: 16vw;}
   #folderFront {width: 77%;}
   #folderBack {width: 77%;}
+}
+@media (max-width: 570px) {
+  #folderFront {margin-top: -1.5%;}
 }
 @media (max-width: 490px) {
-  #portfolio {margin-top: -42%; margin-bottom: -21%; font-size: 14vw;}
+  #portfolio {margin-top: -42%; font-size: 14vw;}
 }
-@media (max-width: 500px) {
-  #portfolio {margin-top: -39%; margin-bottom: -23%; font-size: 14vw;}
+@media (max-width: 510px) {
+  #infoBottom {margin-top: -20%;}
+  #portfolio {margin-top: -39%; font-size: 14vw; margin-bottom: 25%;}
 }
 @media (max-width: 460px) {
+  .home-container {max-height: 600px;}
+  #infoBottom {margin-top: -25%;}
   #portfolio {font-size: 14vw;}
+  #folderFront {margin-top: 5%;}
 }
 
 @media (max-width: 430px) {
-  #portfolio {margin-top: -40%; margin-bottom: -22%;}
+  #portfolio {margin-top: -40%; }
+  #folderFront {margin-top: 8%;}
 }
 
 @media (max-width: 420px) {
-  #portfolio { margin-top: -42%; margin-bottom: -21%;}}
+  #portfolio { margin-top: -42%;}}
 
 @media (max-width: 400px) {
-   #portfolio { margin-top: -45%; margin-bottom: -26%;}
-  #folderFront {width: 88%;}
+   #portfolio { margin-top: -45%; }
+  #folderFront {width: 88%; margin-top: 8%;}
   #folderBack {width: 88%;}
 }
 @media (max-width: 390px) {
-  #portfolio { margin-top: -44%; margin-bottom: -24%;}
-  #folderFront {width: 86%;}
+  #portfolio { margin-top: -44%; margin-bottom: 30%;}
+  #folderFront {width: 86%; margin-top: 8%;}
   #folderBack {width: 86%;}
+  #infoBottom {margin-top: -30%;}
 }
 @media (max-width: 380px) {
+  .home-container {max-height: 480px; padding: 0%;}
   #folderFront {width: 83%;}
   #folderBack {width: 83%;}
+  #infoBottom p:nth-child(2){margin-bottom: 13%;}
+  .item-container {margin-top: 0;}
+  #firstP {margin-top: 20%;}
 }
 @media (max-width: 360px) {
   #folderFront {width: 84%;}
