--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 .home-wrapper {
-  height: 100vh;
   position: relative;
   z-index: 1;
+  background-color: lightblue;
+  border: 2px solid blue;
 }
 
 .about-wrapper {
-  margin-top: -28vh; /* 화면 위로 올림 */
-  position: relative;
+  position: relative; /* or fixed */
   z-index: 2;
   background-color: white;
+  border: 2px solid red;
 }
