--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,6 @@
-.home-wrapper {
-  position: relative;
-  z-index: 1;
-  background-color: lightblue;
-  border: 2px solid blue;
-}
-
-.about-wrapper {
-  position: relative; /* or fixed */
-  z-index: 2;
-  background-color: white;
-  border: 2px solid red;
+.App {
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
