project jsx add

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -5,8 +5,7 @@
   font-family: 'Pretendard', sans-serif;
   color: #222;
   flex-wrap: wrap;
-   height: 100vh;
-  scroll-snap-align: start;
+  padding-top: 4rem;
 }
 
 .left-section {
