--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -19,6 +19,7 @@
 }
 
 .home-container {
+  height: 100vh;
   padding: 30px;
   background-image: url('../static/img/MainImg/background.jpg');
   box-sizing: border-box;
