--- a/src/css/Work.css
+++ b/src/css/Work.css
@@ -1,5 +1,5 @@
 .work-section2 {
-  padding: 80px 10%;
+  padding: 70px 8%;
   background-color: #f9f9f9;
 }
 
@@ -44,6 +44,14 @@
   color: #222;
   margin-bottom: 6px;
 }
+
+.card-header #label {
+  padding: 2%;
+  background-color: #fd6f22;
+  border-radius: 10px;
+  font-size: 0.7rem;
+}
+
 .card-period {
   display: block;
   font-size: 0.9rem;
