--- a/src/css/Skils.css
+++ b/src/css/Skils.css
@@ -20,9 +20,11 @@
   align-items: center;
   text-align: center;
   margin-bottom: 5%;
+  height: 60vh;
 }
 
 #skils {
+  margin-top: 6rem;
   font-family: 'goorm-sans-bold';
   font-size: clamp(2rem, 2.5vw, 4rem);
   margin-bottom: 1rem;
