--- a/src/css/About.css
+++ b/src/css/About.css
@@ -28,12 +28,14 @@
 
 .right-section {
   display: flex;
+  flex-wrap: wrap;
   flex: 3;
 }
 
 .summary {
+  font-family: 'GangwonEdu_OTFBoldA';
   background: #f9f9f9;
-  padding: 1.5rem;
+  padding: 1.6rem;
   border-radius: 10px;
   line-height: 1.6;
 }
