--- a/src/css/Project.css
+++ b/src/css/Project.css
@@ -90,6 +90,22 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.video-container {
+  width: 100%;
+  max-width: 500px;
+  aspect-ratio: 16 / 9; /* 자동으로 16:9 비율 높이 계산 */
+}
+
+.video-container iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+#system {
+  width: 60%;
+}
+
 
 @media(max-width: 700px) {
   .project-container { padding: 2rem;}
@@ -97,4 +113,8 @@
   top: 2.5rem;
   right: 2.8rem;
 }
+}
+
+@media(max-width: 500px) {
+  .project-container {padding: 0}
 }
